[package]
name = "sizefmt"
version = "0.1.0"
edition = "2018"
authors = ["Daniel P. Teberian"]
description = "A crate that simplifies formatting of filesizes."
categories = ["no-std"]
license = "Apache-2.0"
repository = "https://github.com/LibertyOS-Development/sizefmt"

[dependencies]
generic-array = "0.12.0"
num = { version = "0.2", default-features = false }
